src/material/chips/chip.scss
/* ... */
.mdc-evolution-chip__action--secondary {
  position: relative;
  overflow: visible;

  .mat-mdc-standard-chip:not(.mdc-evolution-chip--disabled) & {
    color: token-utils.slot(chip-with-trailing-icon-trailing-icon-color, $fallbacks);
  }

  .mat-mdc-standard-chip.mdc-evolution-chip--disabled & {
    color: token-utils.slot(chip-with-trailing-icon-disabled-trailing-icon-color, $fallbacks);
  }

  // Moved out into variables, because the selectors are too long.
  $with-graphic: '.mdc-evolution-chip--with-primary-graphic';
  $with-trailing: '.mdc-evolution-chip--with-trailing-action';

  .mat-mdc-standard-chip#{$with-trailing} & {
    padding-left: $_trailing-action-padding;
    padding-right: $_trailing-action-padding;
  }

  .mat-mdc-standard-chip#{$with-graphic}#{$with-trailing} & {
    padding-left: $_trailing-action-padding;
    padding-right: $_trailing-action-padding;
  }

  .mdc-evolution-chip--with-avatar#{$with-graphic}#{$with-trailing} & {
    padding-left: $_avatar-trailing-padding;
    padding-right: $_avatar-trailing-padding;
  }

  [dir='rtl'] .mdc-evolution-chip--with-avatar#{$with-graphic}#{$with-trailing} & {
    padding-left: $_avatar-trailing-padding;
    padding-right: $_avatar-trailing-padding;
  }

}

.mdc-evolution-chip__text-label {
  @include vendor-prefixes.user-select(none);
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;

  .mat-mdc-standard-chip & {
    font-family: token-utils.slot(chip-label-text-font, $fallbacks);
    line-height: token-utils.slot(chip-label-text-line-height, $fallbacks);
    font-size: token-utils.slot(chip-label-text-size, $fallbacks);
    font-weight: token-utils.slot(chip-label-text-weight, $fallbacks);
    letter-spacing: token-utils.slot(chip-label-text-tracking, $fallbacks);
  }

  .mat-mdc-standard-chip:not(.mdc-evolution-chip--disabled) & {
    color: token-utils.slot(chip-label-text-color, $fallbacks);
  }

  .mat-mdc-standard-chip.mdc-evolution-chip--selected:not(.mdc-evolution-chip--disabled) & {
    color: token-utils.slot(chip-selected-label-text-color, $fallbacks);
  }

  .mat-mdc-standard-chip.mdc-evolution-chip--disabled &,
  .mat-mdc-standard-chip.mdc-evolution-chip--selected.mdc-evolution-chip--disabled & {
    color: token-utils.slot(chip-disabled-label-text-color, $fallbacks);
  }
}

.mdc-evolution-chip__graphic {
  align-items: center;
  display: inline-flex;
  justify-content: center;
  overflow: hidden;
  pointer-events: none;
  position: relative;
  flex: 1 0 auto;

  .mat-mdc-standard-chip & {
    width: token-utils.slot(chip-with-avatar-avatar-size, $fallbacks);
    height: token-utils.slot(chip-with-avatar-avatar-size, $fallbacks);
    font-size: token-utils.slot(chip-with-avatar-avatar-size, $fallbacks);
  }

  .mdc-evolution-chip--selecting & {
    transition: width 150ms 0ms cubic-bezier(0.4, 0, 0.2, 1);
  }

  // Moved out into variables, because the selectors are too long.
  $with-icon: '.mdc-evolution-chip--with-primary-icon';
  $with-graphic: '.mdc-evolution-chip--with-primary-graphic';
  $with-leading: '.mdc-evolution-chip--with-leading-action';
  $with-trailing: '.mdc-evolution-chip--with-trailing-action';

  .mdc-evolution-chip--selectable:not(.mdc-evolution-chip--selected):not(#{$with-icon}) & {
    width: 0;
  }

  .mat-mdc-standard-chip#{$with-graphic} & {
    padding-left: $_graphic-padding;
    padding-right: $_graphic-padding;
  }

  .mdc-evolution-chip--with-avatar#{$with-graphic} & {
    padding-left: $_avatar-leading-padding;
    padding-right: $_avatar-trailing-padding;
  }

  [dir='rtl'] .mdc-evolution-chip--with-avatar#{$with-graphic} & {
    padding-left: $_avatar-trailing-padding;
    padding-right: $_avatar-leading-padding;
  }

  .mat-mdc-standard-chip#{$with-graphic}#{$with-trailing} & {
    padding-left: $_graphic-padding;
    padding-right: $_graphic-padding;
  }

  .mdc-evolution-chip--with-avatar#{$with-graphic}#{$with-trailing} & {
    padding-left: $_avatar-leading-padding;
    padding-right: $_avatar-trailing-padding;
  }

  [dir='rtl'] .mdc-evolution-chip--with-avatar#{$with-graphic}#{$with-trailing} & {
    padding-left: $_avatar-trailing-padding;
    padding-right: $_avatar-leading-padding;
  }

  .mdc-evolution-chip--with-avatar#{$with-graphic}#{$with-leading} & {
    padding-left: 0;
  }
}

.mdc-evolution-chip__checkmark {
  position: absolute;
  opacity: 0;
  top: 50%;
  left: 50%;
  height: $_checkmark-size;
  width: $_checkmark-size;

  .mat-mdc-standard-chip:not(.mdc-evolution-chip--disabled) & {
    color: token-utils.slot(chip-with-icon-selected-icon-color, $fallbacks);
  }

  .mat-mdc-standard-chip.mdc-evolution-chip--disabled & {
    color: token-utils.slot(chip-with-icon-disabled-icon-color, $fallbacks);
  }

  .mdc-evolution-chip--selecting & {
    transition: transform 150ms 0ms cubic-bezier(0.4, 0, 0.2, 1);
    transform: translate(-75%, -50%);
  }

  .mdc-evolution-chip--selected & {
    transform: translate(-50%, -50%);
    opacity: 1;
  }
}

.mdc-evolution-chip__checkmark-svg {
  display: block;
}

.mdc-evolution-chip__checkmark-path {
  stroke-width: 2px;
  stroke-dasharray: 29.7833385;
  stroke-dashoffset: 29.7833385;
  stroke: currentColor;

  .mdc-evolution-chip--selecting & {
    transition: stroke-dashoffset 150ms 45ms cubic-bezier(0.4, 0, 0.2, 1);
  }

  .mdc-evolution-chip--selected & {
    stroke-dashoffset: 0;
  }

  @include cdk.high-contrast {
    // SVG colors won't be changed in high contrast mode and since the checkmark is white
    // by default, it'll blend in with the background in black-on-white mode. Override the
    // color to ensure that it's visible. We need !important, because the theme styles are
    // very specific.
    stroke: CanvasText !important;
  }
}
/* ... */

